--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    expose:
-      - 9100
+    ports:
+      - 9100:9100
     networks:
       - monitoring
 
@@ -48,11 +48,13 @@ services:
     networks:
       - monitoring
   grafana:
-    image: grafana/grafana:5.1.0
+    image: grafana/grafana:latest
     ports:
       - 3000:3000
     user: '104'
     volumes:
       - grafana-data:/var/lib/grafana
+    environment:
+      - "GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource"
     networks:
       - monitoring
